# wii-controller-c

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
docs/: Doxyfile.in
include/: kermit.h  log.h  robot_control.h  serial.h  string_ops.h  utils.h  wii_controller.h
scripts/: wii-controller.service
src/: log.c  main.c  robot_control.c  string_ops.c  wii_controller.c
teensy/: platformio.ini
teensy/include/: robot.h
teensy/src/: main.cpp
tests/xbee_tests/: a.out  globals.h  xbee_host.c  xbee_send.c
tests/xbee_tests/teensy/include/: robot.h
tests/xbee_tests/teensy/src/: main.cpp
wiiuse/cmake/ghost-fake-stl/: iostream.h  set.h
wiiuse/example/: example.c
wiiuse/example-sdl/: sdl.c
wiiuse/src/: classic.c  classic.h  definitions.h  dynamics.c  dynamics.h  events.c  guitar_hero_3.c  guitar_hero_3.h  io.c  io.h  ir.c  motion_plus.c  motion_plus.h  nunchuk.c  nunchuk.h  os_nix.c  os_win.c  util.c  wiiboard.c  wiiboard.h  wiiuse.c  wiiuse.h  wiiuse_internal.h  wiiuse_msvcstdint.h
wiiuse/src/os_mac/: os_mac.c  os_mac.h
